--- a/LabyrinthianDemo/wwwroot/index.html
+++ b/LabyrinthianDemo/wwwroot/index.html
@@ -37,7 +37,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>LabyrinthianDemo</title>
-    <base href="/LabyrinthianDemo" />
+    <base href="/LabyrinthianDemo/" />
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="LabyrinthianDemo.styles.css" rel="stylesheet" />
