Implement SVG export feature

--- a/LabyrinthianDemo/wwwroot/index.html
+++ b/LabyrinthianDemo/wwwroot/index.html
@@ -61,6 +61,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="js/downloadFileFromStream.js"></script>
 </body>
 
 </html>
