Add gestures support

--- a/LabyrinthianDemo/wwwroot/index.html
+++ b/LabyrinthianDemo/wwwroot/index.html
@@ -62,6 +62,8 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="js/downloadFileFromStream.js"></script>
+    <script src="js/mgestures.js"></script>
+    <script src="js/mazeGestures.js"></script>
 </body>
 
 </html>
