--- a/LabyrinthianDemo/wwwroot/index.html
+++ b/LabyrinthianDemo/wwwroot/index.html
@@ -42,7 +42,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="LabyrinthianDemo.styles.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css?v=2" rel="stylesheet" />
 </head>
 
 <body>
@@ -60,7 +60,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js?v=2"></script>
     <script src="js/downloadFileFromStream.js"></script>
     <script src="js/mgestures.js"></script>
     <script src="js/mazeGestures.js"></script>
